# rules_mirror

./: .bazelrc  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  go.mod  go.sum  go_repositories.bzl  internal_deps.bzl
.fasterci/: config.yaml
.github/workflows/: ci.yaml  release.yml  workspace_snippet.sh
cmd/mirror/: BUILD.bazel  main.go
docs/: BUILD.bazel
e2e/workspace/: BUILD  WORKSPACE
mirror/: BUILD.bazel  defs.bzl  mirror_image.sh  repositories.bzl  toolchain.bzl
mirror/private/: BUILD.bazel  toolchains_repo.bzl
mirror/tests/: BUILD.bazel  deployment.yaml  gitops_setup_test.sh  kubectl  kustomize1.golden  simple_server_test.go
mirror/tests_oci/: BUILD.bazel  deployment.yaml  kustomize1.golden  simple_server_test.go
pkg/mirror/: BUILD.bazel  mirror.go  mirror_test.go
pkg/testing/testregistry/: BUILD.bazel
