load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        # "@bazel_skylib_gazelle_plugin//gazelle/bzl",
    ],
)

# gazelle:prefix github.com/fasterci/rules_mirror
gazelle(
    name = "gazelle",
    command = "fix",
    gazelle = ":gazelle_bin",
)

gazelle(
    name = "gazelle_update_deps",
    command = "update-repos",
    extra_args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_dependencies",
        "-prune=true",
    ],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "go_repositories",
    srcs = ["go_repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:deps"],
)
