load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        # "@bazel_skylib_gazelle_plugin//gazelle/bzl",
    ],
)

# gazelle:prefix github.com/fasterci/rules_mirror
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = [
        "-proto",
        "disable_global",
    ],
    gazelle = ":gazelle_bin",
)

gazelle(
    name = "gazelle_update_deps",
    command = "update-repos",
    extra_args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_dependencies",
        "-prune=true",
        "-build_file_proto_mode=disable_global",
        "-build_file_generation=on",
    ],
)

bzl_library(
    name = "go_repositories",
    srcs = ["go_repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:deps"],
)
